# coffee-grinder

./: .gitignore  LICENSE  README.md
firmware/: CMakeLists.txt  coffe_grinder_firmware.c  pico_sdk_import.cmake
